<resources>
    <string name="app_name">BuyNow</string>

    <string name="slide_title_1">Secure and easy<br>payment</br>  </string>
    <string name="slide_title_2">Reach your favorite store\n everywhere</string>
    <string name="slide_title_3">On-time door-step \n delivery</string>

    <string name="slide_desc_1">Make payment directly from your credit/debit<br>card or fund your in-app wallet to make</br> <br>purchases</br>  </string>
    <string name="slide_desc_2">Our platform puts your favorite place right in\n the palm of your hands</string>
    <string name="slide_desc_3">Fast, free and convenient delivery on\n thousands of items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_authn">AuthnActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello">Hello</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="show_all">Show All</string>
    <string name="naira">₦</string>
    <string name="featured">Featured</string>
    <string name="item_price">Buy ₦%1$.2f</string>
    <string name="enter_id">enter ID number here</string>
    <string name="driver_id">Driver ID</string>
    <string name="fill_your_details">Fill your details and let\'s start making money</string>
    <string name="password">Password</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="log_in">Log in</string>
    <string name="successful">Successful</string>
    <string name="success_text_long_rider">Your details have been confirmed and you will be switched to the driver\'s dashboard now</string>
    <string name="cont">Continue</string>
    <string name="switch_to_rider_account">Switch to rider account</string>
    <string name="personal_info">Personal Information</string>
    <string name="my_saved_addresses">My Saved Addresses</string>
    <string name="password_and_security">Password and Security</string>
    <string name="logout">Logout</string>
    <string name="get_started">Get Started</string>
    <string name="join_hundreds_of_riders">Join hundreds of riders to deliver items and cash out maximally</string>
    <string name="hustle_for_your_extra_2k_with_buynow">Hustle for your extra 2k with BuyNow</string>
    <string name="which_of_these_best_describes_you">Which of these best describes you?</string>
    <string name="registered_driver_txt">I am registered under a fleet and already have a Driver ID</string>
    <string name="freelance_rider_txt">I am a freelance rider and I do not have a Driver ID yet</string>
    <string name="rides_today">Rides Today</string>
    <string name="rider_rating">Rider Rating</string>
    <string name="show_all">Show All</string>
    <string name="rides">Rides</string>
    <string name="login">Login</string>
    <string name="hello">Hello</string>
</resources>