<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.rider.authn.RiderOnboarding2Fragment"
    android:padding="16dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        android:id="@+id/back_arrow"/>


    <TextView
        android:id="@+id/which_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_of_these_best_describes_you"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"
        android:textSize="38sp"
        android:textColor="@color/black"
        android:fontFamily="@font/mulish_extrabold"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/which_txt"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/registered_driver_txt" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginVertical="16dp"
            android:background="@color/colorText_grey"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/freelance_rider_txt" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/blue_box"
        app:backgroundTint="@color/colorBlue"
        android:text="@string/cont"
        android:textSize="18sp"
        android:fontFamily="@font/mulish_regular"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>