<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragment.rider.RiderProfileFragment">

    <ImageView
        android:id="@+id/rider_profile_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:shapeAppearance="@drawable/blue_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/rider_profile_img"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/switch_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rider_profile_img"
        tools:text="Mika James" />

    <TextView
        android:id="@+id/switch_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/grey_box"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        android:text="@string/switch_to_rider_account"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@id/personal_info_txt"
        app:layout_constraintTop_toBottomOf="@id/profile_name" />

    <TextView
        android:id="@+id/personal_info_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/grey_box"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/personal_info"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/ic_baseline_play_arrow_24"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toTopOf="@id/saved_addresses_txt"
        app:layout_constraintTop_toBottomOf="@id/switch_txt" />

    <TextView
        android:id="@+id/saved_addresses_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/grey_box"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/my_saved_addresses"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/ic_baseline_play_arrow_24"
        app:drawableStartCompat="@drawable/ic_baseline_settings_24"
        app:layout_constraintBottom_toTopOf="@id/password_security_txt"
        app:layout_constraintTop_toBottomOf="@id/personal_info_txt" />

    <TextView
        android:id="@+id/password_security_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/grey_box"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/password_and_security"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/ic_baseline_play_arrow_24"
        app:drawableStartCompat="@drawable/security_layer_list"
        app:layout_constraintBottom_toTopOf="@id/logout_txt"
        app:layout_constraintTop_toBottomOf="@id/saved_addresses_txt" />

    <TextView
        android:id="@+id/logout_txt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/grey_box"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/logout"
        android:fontFamily="@font/mulish_regular"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/ic_baseline_play_arrow_24"
        app:drawableStartCompat="@drawable/logout"
        app:layout_constraintTop_toBottomOf="@id/password_security_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>