<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragment.rider.authn.RiderOnboardingFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rider_onboard_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_rider_onboard_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rider_onboard_img"
        app:layout_constraintBottom_toBottomOf="@id/rider_onboard_img"
        app:layout_constraintEnd_toEndOf="@id/rider_onboard_img"
        app:layout_constraintStart_toStartOf="@id/rider_onboard_img"
        app:layout_constraintTop_toTopOf="@id/rider_onboard_img" />

    <TextView
        android:id="@+id/hustle_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/hustle_for_your_extra_2k_with_buynow"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rider_onboard_img" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/join_hundreds_of_riders"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hustle_txt" />

    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="32dp"
        android:background="@drawable/blue_box"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@color/colorBlue"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>